fix align header buttons right

--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -19,8 +19,9 @@ header {
   }
 
   .header-buttons {
+    margin-left: auto;
     &.margin-left {
-      margin-left: auto;
+      margin-left: initial;
     }
     display: flex;
     align-items: center;
